<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="login_btn">Login</string>
    <string name="welcomeTitle">Welcome to our store  </string>
    <string name="welcomeTitle2">thank you for choosing our store you will enjoy with us </string>
    <string name="shoe_store_image">Shoe store image</string>
    <string name="next_btn">next</string>
    <string name="InstructionsTittle">Instructions</string>
    <string name="Instructions">1-open the program  2-add a new item 3-write the properties of the shoe 4-click add to the shoe list</string>
    <string name="start_btn">Start</string>
    <string name="add_button">Add Button</string>
    <string name="Shoe_detail">Shoe Details</string>
    <string name="shoe_name">Name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Size</string>
    <string name="shoe_description">Description</string>
    <string name="register_btn">Register</string>
    <string name="cancel_btn">Cancel</string>
    <string name="add_btn">Add</string>
    <string name="logout_menu">Log out</string>
</resources>
